# IdealFlowNetwork

./: .readthedocs.yaml  CONTRIBUTING.md  IFN.py  IdealFlowNetwork.py  Link.txt  MANIFEST  Node.txt  README.md  ReadMe.md  Scenario.txt  conf.py  pyproject.toml  setup.py
.github/: dependabot.yml
Distribution/: ReadMe.md  ifn.exe.manifest
IFN.egg-info/: SOURCES.txt
IdealFlow/: Command.py  Network.py  Table.py  __init__.py  entity_patterns.json  intents.json
IdealFlowNetwork/: IFN_Tests.py
IdealFlowNetwork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SampleScenarios/: ReadMe.md
SampleScenarios/Ateneo2018/: AteneoScenario.scn  Links_withCloud.lin  Nodes_withCloud.nod  ReadMe.md
SampleScenarios/Simplest/: ReadMe.md  link2.txt  scenario2.txt
Source/: IdealFlowNetwork.py  Link.txt  ReadMe.md  display_network.py
docs/: .readthedocs.yaml  IdealFlow.html  cycle_analysis.html  data_science_ai.html  data_structure.html  flow_management.html  genindex.html  index.html  markov.html  matrix.html  modules.html  neighborhood.html  network_indices.html  network_operation.html  overview.html  requirements.txt  stochastic.html  transportation_analysis.html  unit_tests.html
docs/_sources/: cycle_analysis.rst.txt  data_structure.rst.txt  entropy.rst.txt  flow_management.rst.txt  ifn.rst.txt  network_operation.rst.txt  (+2 more)
pkg/: README.md  pyproject.toml  setup.py
pkg/IFN.egg-info/: PKG-INFO
pkg/IdealFlow/: Automation.py  Node.py  plugin.py
pkg/IdealFlow/plugins/: LLM_plugin.py  crawler_plugin.py  infographic_plugin.py  mouse_plugin.py  my_plugin.py  notepad_plugin.py  sample_plugin.py  user_data_plugin.py
pkg/IdealFlowNetwork.egg-info/: PKG-INFO  SOURCES.txt
pkg/examples/: example_chatbot.py  example_crawler.py  example_mouse_recording.py  example_mouse_simulation.py  example_notepad.py  example_sample_plugin.py  example_scaper.py  example_user_data.py
src/: __init__.py.txt
tests/: IFN_test_1.py  IFN_test_2.py  IFN_test_3.py  example_chatbot.py  example_notepad.py  example_sample_plugin.py  example_user_data.py
(+32 files in other folders)
