[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IdealFlowNetwork"
version = "1.15.3"
authors = [
  { name="Kardi Teknomo", email="kardi.teknomo@petra.ac.id" },
]
description = "A Python package for Ideal Flow Network computations"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  'scipy>=1.7',
  'networkx>=3.1',
  'numpy>=1.24.4',
  'matplotlib>=3.7.5',
]
requires-python = ">=3.10"
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: OS Independent',
  'Topic :: Scientific/Engineering',
]
keywords = ["ideal flow network", "graph theory","network analysis"]

[project.urls]
Homepage = "https://github.com/teknomo/IdealFlowNetwork"
Issues = "https://github.com/teknomo/IdealFlowNetwork/issues"
Documentation = 'https://people.revoledu.com/kardi/research/trajectory/ifn/doc/html'
