[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IdealFlowNetwork"
version = "1.15.4"
authors = [
  { name="Kardi Teknomo", email="kardi.teknomo@petra.ac.id" },
]
description = "A Python package for Ideal Flow Network computations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering'
]

[project.urls]
Homepage = "https://github.com/teknomo/IdealFlowNetwork"
Issues = "https://github.com/teknomo/IdealFlowNetwork/issues"
Documentation = "https://idealflownetwork.readthedocs.io/"